--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
+gunicorn==20.0.4
 python-dotenv==0.13.0
 Werkzeug==1.0.1
 WTForms==2.3.1
